# Pattern-Recognition-and-Computer-Vision

./: .gitignore  CMakeLists.txt  INSTALLATION_GUIDE.md  LICENSE  README.md  main.cpp
